# ROS2-Projects

./: README.md
arduinobot_bringup/: CMakeLists.txt  package.xml
arduinobot_bringup/launch/: simulated_robot.launch.py
arduinobot_controller/: CMakeLists.txt  package.xml
arduinobot_controller/config/: arduinobot_controllers.yaml
arduinobot_controller/launch/: controller.launch.py
arduinobot_cpp_examples/: CMakeLists.txt  package.xml
arduinobot_cpp_examples/src/: cpptemplate.txt  pose_publisher.cpp  simple_action_client.cpp  simple_moveit_interface.cpp
arduinobot_description/: package.xml
arduinobot_description/launch/: gazebo.launch.py
arduinobot_description/urdf/: arduinobot.urdf  arduinobot_ros2_control.xacro
arduinobot_description/urdf/arduinobot/: arduinobot.usd
arduinobot_moveit/: package.xml
arduinobot_moveit/config/: arduinobot.srdf
arduinobot_moveit/launch/: moveit.launch.py
arduinobot_msgs/: CMakeLists.txt  package.xml
arduinobot_msgs/action/: ArduinobotTask.action  Fibonacci.action  ImgProc.action
arduinobot_msgs/msg/: JointPub.msg
arduinobot_py_examples/: package.xml  setup.py
arduinobot_py_examples/arduinobot_py_examples/: image_subscriber.py  pythontemplate.txt  simple_action_client.py  simple_action_server.py
arduinobot_remote/: CMakeLists.txt  package.xml
arduinobot_remote/arduinobot_remote/: alexa_interface.py
arduinobot_remote/launch/: remote_interface.launch.py
arduinobot_remote/src/: move_task.cpp.txt  task_server.cpp
arduinobot_utils/: CMakeLists.txt  package.xml
